<resources>
    <string name="app_name">Imunisasi Ku</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">SIPENI</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="email">Email*</string>
    <string name="kata_sandi">Kata Sandi*</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_sebagai_admin">Masuk sebagai admin</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="nama_lengkap">Nama Lengkap*</string>
    <string name="jenis_kelamin">Jenis Kelamin*</string>
    <string name="laki_laki">Laki - laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="no_handphone">No. Handphone*</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi*</string>
    <string name="daftar">Daftar</string>
    <string name="register_akun">Register Akun</string>
    <string name="masuk_akun_admin">Masuk Akun Admin</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="daftar_imunisasi">Daftar Imunisasi</string>
    <string name="saat_ini_belum_ada_n_pendaftaran_imunisasi">Saat ini belum ada \n pendaftaran imunisasi</string>
    <string name="yuk_daftar_sekarang">Yuk, daftar sekarang</string>
    <string name="imunisasi_terdekat">Imunisasi Terdekat</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="tanggal_imunisasi">Tanggal Imunisasi</string>
    <string name="jenis_imunisasi">Jenis Imunisasi</string>
    <string name="hari_lagi">Hari lagi</string>
    <string name="fitur">Fitur</string>
    <string name="jadwalku">Jadwalku</string>
    <string name="pasien">Pasien</string>
    <string name="informasi">Informasi</string>
    <string name="imunisasi">Imunisasi</string>
    <string name="jadwal_imunisasi">Jadwal Imunisasi</string>
    <string name="bidan_kami">Bidan Kami</string>
    <string name="ada_kendala_pertanyaan">Ada kendala? Pertanyaan?</string>
    <string name="silahkan_hubungi_kami">Silahkan hubungi kami</string>
    <string name="hubungi_admin">Hubungi Admin</string>
    <string name="daftar_pasien">Daftar Pasien</string>
    <string name="tambah_pasien">Tambah Pasien</string>
    <string name="tanggal_lahir">Tanggal Lahir*</string>
    <string name="nik">NIK*</string>
    <string name="catatan">Catatan</string>
    <string name="simpan">Simpan</string>
    <string name="usia">Usia</string>
    <string name="edit_data_pasien">Edit Data Pasien</string>
    <string name="daftar_pasien_input">Daftar Pasien*</string>
    <string name="data_pasien_info">Data Pasien adalah data anak yang akan melakukan imunisasi</string>
    <string name="pilih_pasien">Pilih Pasien</string>
    <string name="pilih_jenis_imunisasi">Pilih Jenis Imunisasi*</string>
    <string name="pilih_jenis_imunisasi_info">Daftar jenis Imunisasi yang bisa didapatkan berdasarkan umur pasien</string>
    <string name="pilih_tanggal_imunisasi">Pilih Tanggal Imunisasi*</string>
    <string name="jam_imunisasi">Jam Imunisasi</string>
    <string name="imunisasiku">ImunisasiKu</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="batalkan">Batalkan</string>
    <string name="umur_pasien">Umur Pasien</string>
    <string name="short_imunisasi_date">%1$s\n%2$s</string>
    <string name="jadwalku_imunisasi">Imunisasi %1$s</string>
    <string name="hai_user">Hai, %1$s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="riwayat_imunisasi">Riwayat Imunisasi</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="bantuan">Bantuan</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="sudah_terlewati">Sudah Terlewati</string>
    <string name="belum_terlewati">Belum Terlewati</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="jangan_lupa_untuk_imunisasi">Jangan Lupa Untuk Imunisasi</string>
    <string name="reminder_imunisasi">Reminder imunisasi %1$s</string>
    <string name="onboarding_1">Selamat datang di aplikasi SIPENI</string>
    <string name="onboarding_2">Temukan Kekuatan dengan Imunisasi</string>
    <string name="onboarding_3">Atur jadwal imunisasi dengan mudah</string>
    <string name="onboarding_content_1">Optimalkan pertumbuhan anak anda dengan imunisasi yang tepat waktu</string>
    <string name="onboarding_content_2">Imunisasi adalah kunci keberhasilan perlindungan kesehatan anak anda</string>
    <string name="onboarding_content_3">Menentukan jadwal imunisasi yang tepat dan mudah</string>
    <string name="lanjut">Lanjut</string>
    <string name="lewati">Lewati</string>
    <string name="mulai">Mulai</string>
    <string name="next">Lanjut</string>
    <string name="title">Title</string>
    <string name="ayo_imunisasi">Ayo Imunisasi</string>
    <string name="alert_ganti_siklus">Dengan mengganti siklus, semua jadwal akan dihapus. silahkan tambah jadwal pada halaman tambah jadwal setelah menyimpan perubahan</string>
    <string name="dibatalkan">Dibatalkan</string>
    <string name="pentingnya_imunisasi">Pentingnya Imunisasi</string>
    <string name="nama_bidan">PMB Nola Octavia, S.ST, BDN</string>
    <string name="jadwal_praktek">Praktek Setiap Hari\nPukul 07.00 – 20.00\nUntuk Persalinan 24 Jam</string>
    <string name="alamat_praktek">Alamat\nKp. Cibogo II Udiklat PLN RT 03 RW 06\nCipayung kec. Megamendung Bogor</string>

</resources>