<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.profile.UserEditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_app_bar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back"
                    style="@style/Widget.MaterialComponents.Button.IconOnly"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    app:icon="@drawable/ic_back"
                    app:iconPadding="5dp"
                    app:iconSize="24dp"
                    app:iconTint="@color/black" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/cv_app_bar">

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nama_lengkap"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_jenis_kelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/jenis_kelamin"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tl_nama"
            app:layout_constraintTop_toBottomOf="@id/tl_nama" />

        <RadioGroup
            android:id="@+id/rg_jenis_kelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/tv_jenis_kelamin"
            app:layout_constraintTop_toBottomOf="@id/tv_jenis_kelamin">

            <RadioButton
                android:id="@+id/radio_laki_laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/laki_laki"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/perempuan"
                android:textSize="18sp" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/rg_jenis_kelamin">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/no_handphone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/tl_phone">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/tl_email">

            <EditText
                android:id="@+id/et_nik"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nik"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/simpan"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/tl_nik" />

        <View
            android:id="@+id/view"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_keluar_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/keluar_akun"
            android:textColor="@color/light_red"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="@id/btn_simpan"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/tv_hapus_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hapus_akun"
            android:textColor="@color/light_red"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@id/btn_simpan"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.cardview.widget.CardView
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:cardBackgroundColor="@color/black30">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>