<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.ui.profile.EditProfile">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/nama_lengkap"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_jenis_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/jenis_kelamin"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tl_nama"
        app:layout_constraintTop_toBottomOf="@id/tl_nama" />

    <RadioGroup
        android:id="@+id/rg_jenis_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_jenis_kelamin"
        app:layout_constraintTop_toBottomOf="@id/tv_jenis_kelamin">

        <RadioButton
            android:id="@+id/radio_laki_laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/laki_laki"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_perempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/perempuan"
            android:textSize="18sp" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/rg_jenis_kelamin">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/no_handphone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/tl_phone">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/poppins_medium"
        android:text="Simpan"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_simpan"
        app:layout_constraintEnd_toEndOf="@id/btn_simpan"
        app:layout_constraintStart_toStartOf="@id/btn_simpan"
        app:layout_constraintTop_toTopOf="@id/btn_simpan" />

</androidx.constraintlayout.widget.ConstraintLayout>